<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19496C"
    android:orientation="vertical"
    tools:context=".view.CadastroUsuarioActivity">


    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:background="#19496C"
        android:text="@string/txtCadastro"
        android:textColor="#F6EDED"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txtNome"
        android:textColor="#F6EDED"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="16dp"
        android:hint="@string/txtHintNome"
        android:inputType="textPersonName"
        android:textColor="#FFF5F5"
        android:textColorHint="#9CBAD8"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txtEmail"
        android:textColor="#F6EDED"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="16dp"
        android:hint="@string/txtHintEmail"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#9CBAD8"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtHintSenha"
        android:textColor="#F6EDED"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="16dp"
        android:hint="@string/txtHintSenha"
        android:inputType="numberPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#9CBAD8"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtSenhaB"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtSenhaB"
        android:textColor="#F6EDED"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editSenhaB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="16dp"
        android:hint="@string/txtHintSenhaB"
        android:inputType="numberPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#9CBAD8"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/chTermos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="validarTermo"
        android:text="@string/txtTermo"
        android:textColor="#F6EDED"
        android:textColorHint="#FBFBFB"
        android:textSize="10sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:background="#2196F3"
        android:hapticFeedbackEnabled="true"
        android:shadowColor="#D7DA88"
        android:text="@string/btnCadastro"
        android:textColor="#F6EAEA" />
</androidx.appcompat.widget.LinearLayoutCompat>