<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher_background_image"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">


    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16sp"
        android:background="@android:drawable/divider_horizontal_dim_dark"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:background="@android:drawable/divider_horizontal_dark"
        android:fontFamily="monospace"
        android:text="@string/txtLogin"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtEmail"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/txtHintEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8sp"
        android:text="@string/txtHintSenha"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/txtHintSenha"
        android:inputType="numberPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="12sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkLembrar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:onClick="lembrarSenha"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/chkLembrar"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRecSenha"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/txtRecuperarSenha"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/btnAcessar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/ic_shape_button"

            android:shadowColor="#D7DA88"
            android:text="@string/btnAcessar"
            android:textColor="#F6EAEA" />

        <Button
            android:id="@+id/btnSejaVip"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/ic_shape_button"
            android:hapticFeedbackEnabled="true"
            android:shadowColor="#D7DA88"
            android:text="@string/btnSejaVip"

            android:textColor="#F6EAEA" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/txtVersao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:background="@android:drawable/divider_horizontal_dim_dark"
        android:text="@string/txtVersaoApp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtLerPolitica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:background="@android:drawable/divider_horizontal_dark"
        android:text="@string/txtLerPolitica"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>